fixed z-index

--- a/src/app/nav-menu/nav-menu.component.css
+++ b/src/app/nav-menu/nav-menu.component.css
@@ -4,6 +4,7 @@
   gap: 50px;
   position: sticky;
   top: 15px;
+  z-index: 10;
   /*font-weight: 700;*/
 }
 
